...
    
    static var identifier = "ProductBagTableViewCell"
    
    weak var delegate: ProductBagTableViewCellDelegate?
    
    enum Strings {
        static let add = "Adicionar"
        static let remove = "Remover"
    }
    
    var item: BagItem? {
        didSet {
            updateData()
        }
...
