...
class HomeViewController: UIViewController {
    private var interactor: HomeBusinessLogic?
    private var router: HomeRoutingLogic?
    private var products: [Product] = []
    
    enum Strings {
        static let title = "Nosso catálogo"
    }
    
    // MARK: Views
    private lazy var tableView: UITableView = {
        let tableView = UITableView()
        tableView.translatesAutoresizingMaskIntoConstraints = false
...
